tests/ui/did_you_mean/pub-macro-rules.stderr
error: can't qualify macro_rules invocation with `pub`
  --> $DIR/pub-macro-rules.rs:2:5
   |
LL |     pub macro_rules! foo {
   |     ^^^
   |
help: try exporting the macro
   |
LL -     pub macro_rules! foo {
LL +     #[macro_export] macro_rules! foo {
   |

error: aborting due to 1 previous error

